# -admin-api-backend

./: .dockerignore  .gitignore  ACTIVITIES.md  BACKUP.md  CACHE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_redis.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: activities.py  databases.py
app/core/: cache.py  config.py  crypto.py
app/db/: session.py
app/models/: __init__.py  activity.py  database.py
app/schemas/: activity.py  backup.py  database.py
app/utils/: activity_logger.py  backup.py  slug.py
client/: README.md  api-client.js  example-usage.jsx  package.json  types.d.ts
sql/: 001_create_databases_table.sql  002_add_slug_to_databases.sql  003_create_activities_table.sql  004_add_activity_icons.sql  999_drop_all.sql  README.md
